REOPENED97269
Kerning never occurs between a space and the following glyph
https://bugs.webkit.org/show_bug.cgi?id=97269
Summary Kerning never occurs between a space and the following glyph
mitz
Reported 2012-09-20 16:05:27 PDT
Kerning never occurs between a space and the following glyph
Attachments
Maintain the advances of space characters (316.00 KB, patch)
2012-09-20 16:09 PDT, mitz
no flags
mitz
Comment 1 2012-09-20 16:09:59 PDT
Created attachment 165005 [details] Maintain the advances of space characters
mitz
Comment 2 2012-09-20 16:19:28 PDT
mitz
Comment 4 2012-09-20 19:18:41 PDT
(In reply to comment #3) > This broke a test: > http://build.webkit.org/results/Apple%20Lion%20Release%20WK1%20(Tests)/r129181%20(3827)/results.html Thanks for noticing this. The original change included updated results for this test for current OS X, but failed to update the Lion results. I have since updated them.
mitz
Comment 5 2012-09-24 10:49:12 PDT
This changed led to an inconsistency between the measurements in line breaking and the ones in RenderText::computePreferredLogicalWidths, which measures spaces separately from their surroundings. I am going to revert it for now.
mitz
Comment 6 2012-09-24 11:17:52 PDT
Eric Seidel (no email)
Comment 7 2013-03-01 10:39:37 PST
Comment on attachment 165005 [details] Maintain the advances of space characters Cleared Tim Horton's review+ from obsolete attachment 165005 [details] so that this bug does not appear in http://webkit.org/pending-commit.
Note You need to log in before you can comment on or make changes to this bug.